5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1759_2101.log
== TEST (2019-05-26 16:21:25) 
-- CODE:
n = int(input("serie: "))
v = zeros(n, dtype=int)
v[0] = 0
v[1] = 1
t = 2
while t<n:
	v[t] = v[t-1] + v[t-2]
	t = t + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = zeros(n, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:21:58) 
-- CODE:
from numpy import*
n = int(input("serie: "))
v = zeros(n, dtype=int)
v[0] = 0
v[1] = 1
t = 2
while t<n:
	v[t] = v[t-1] + v[t-2]
	t = t + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:22:03) 
-- CODE:
from numpy import*
n = int(input("serie: "))
v = zeros(n, dtype=int)
v[0] = 0
v[1] = 1
t = 2
while t<n:
	v[t] = v[t-1] + v[t-2]
	t = t + 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:23:01) 
-- CODE:
from numpy import*
n = int(input("serie: "))
v = zeros(n, dtype=int)
v[0] = 0
v[1] = 1
t = 2
while t<n:
	v[t] = v[t-1] + v[t-2]
	t = t + 1
print(v)
-- EXECUTION TIME:
0.563149
-- TEST CASE 1:
---- input:
10
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34]
---- user output:
[ 0  1  1  2  3  5  8 13 21 34]
-- TEST CASE 2:
---- input:
8
---- correct output:
[ 0 1 1 2 3 5 8 13]
---- user output:
[ 0  1  1  2  3  5  8 13]
-- TEST CASE 3:
---- input:
18
---- correct output:
[ 0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597]
---- user output:
[   0    1    1    2    3    5    8   13   21   34   55   89  144  233
  377  610  987 1597]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
